moved svg sprite to external file added base for slide in and ml menu grid not working yet added browser sync for both html dev and styleguide

--- a/components/util/svg-show.html
+++ b/components/util/svg-show.html
@@ -1,31 +1,29 @@
-{{> util/svgsprite}}
-
-<textarea class="js-copyarea" style="opacity: 0"></textarea>
+<textarea class="js-copyarea"></textarea>
 <br>
 <strong class="js-output" style="display: block; width: 100%; text-align: center; margin-botton: 20px;">&nbsp;</strong>
-<div class="svg-list">
+<div class="svg-list" data-sprite-url="/resources/imgs/svgsprite.svg">
 	<div class="svg-item svg-item--stroke">
-		<svg><use xlink:href="#menu-alt" /></svg>
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#menu-alt" /></svg>
 		<div class="svg-name js-svg-name">#menu-alt</div>
 	</div>
 
 	<div class="svg-item svg-item--stroke">
-		<svg><use xlink:href="#folder" /></svg>
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#folder" /></svg>
 		<div class="svg-name js-svg-name">#folder</div>
 	</div>
 
 	<div class="svg-item svg-item--stroke">
-		<svg><use xlink:href="#filter" /></svg>
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#filter" /></svg>
 		<div class="svg-name js-svg-name">#filter</div>
 	</div>
 
-	<div class="svg-item svg-item--stroke">
-		<svg><use xlink:href="#select" /></svg>
+	<div class="svg-item">
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#select" /></svg>
 		<div class="svg-name js-svg-name">#select</div>
 	</div>
 
-	<div class="svg-item svg-item--stroke">
-		<svg><use xlink:href="#checkbox" /></svg>
+	<div class="svg-item">
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg>
 		<div class="svg-name js-svg-name">#checkbox</div>
 	</div>
 </div>
