--- a/resources/css/base/mixins.less
+++ b/resources/css/base/mixins.less
@@ -1,4 +1,4 @@
-//@import "mixins/flexmixins";
+@import "mixins/flexmixins";
 @import "mixins/prefixmixins";
 @import "mixins/grid_mixins";
 @import "mixins/mixins";
