--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -24,17 +24,33 @@
 @import "elements/hr";
 @import "elements/buttons";
 @import "elements/table";
-@import "elements/figure";
+//@import "elements/figure";
 @import "elements/image";
 @import "elements/address";
 
 //forms
-@import "forms/form";
+//@import "forms/form";
+
+//UI
+@import "modules/ui/dismissible-slidein";
+@import "modules/ui/ml-menu";
 
 //blog
-@import "modules/blog/blog";
-@import "modules/blog/results";
-@import "modules/blog/blog__meta";
-@import "modules/blog/sidebar";
-@import "modules/blog/sidebar-bands";
-@import "modules/blog/previous-posts";
+//@import "modules/blog/blog";
+//@import "modules/blog/results";
+//@import "modules/blog/blog__meta";
+//@import "modules/blog/sidebar";
+//@import "modules/blog/sidebar-bands";
+//@import "modules/blog/previous-posts";
+
+// .container{
+// 	.container();
+// 	.columns();
+// }
+
+// .column{
+// 	.column();
+// 	height: 50px;
+// 	background: #bbf;
+// 	padding: 10px;
+// }
