--- a/resources/css/styleguide/base.less
+++ b/resources/css/styleguide/base.less
@@ -1,5 +1,5 @@
 .colours{
-	.nested-container();
+	//.nested-container();
 	div{
 		width: 200px;
 		height: 100px;
@@ -58,7 +58,7 @@
 }
 
 .animation{
-	.base-column-p();
+	//.base-column-p();
 	background: #ccc;
 	padding: 15px;
 	margin-top: 15px;
@@ -97,7 +97,7 @@
 		background: #ccc;
 
 		&-container{
-			.column-m(6, none);
+			//.column-m(6, none);
 			margin-bottom: 20px;
 		}
 	}
