--- a/resources/css/styleguide/svg.less
+++ b/resources/css/styleguide/svg.less
@@ -1,13 +1,17 @@
 .svg-list{
-	.flexbox();
-	.flex-wrap(wrap);
+	// .flexbox();
+	// .flex-wrap(wrap);
 }
 
 .svg-item{
-	.column-m(2);
-	.flexbox();
-	.flex-direction(column);
-	.align-items(center);
+	// .column-m(2);
+	// .flexbox();
+	// .flex-direction(column);
+	// .align-items(center);
+
+	*{
+		pointer-events: none;
+	}
 
 	cursor: pointer;
 	&--fill{
