--- a/components/ui/nav.html
+++ b/components/ui/nav.html
@@ -1,5 +1,4 @@
 <button class="js-menu-show" style="position: absolute; top: 0; left: 50%; z-index: 200;">toggle</button>
-<h1>test</h1>
 
 <nav class="someNavClass js-menu-test">
 	<ul>
@@ -46,3 +45,5 @@
 		<li><a href="#">Item 5</a></li>
 	</ul>
 </nav>
+
+<footer style="height: 100px; width: 100%; position: absolute; bottom:0; left: 0; background-color: rgba(150, 150 ,150 ,0.5); z-index: 10;"></footer>
