--- a/components/util/svg-show.html
+++ b/components/util/svg-show.html
@@ -26,5 +26,27 @@
 		<svg><use xlink:href="/resources/imgs/svgsprite.svg#checkbox" /></svg>
 		<div class="svg-name js-svg-name">#checkbox</div>
 	</div>
+
+	<div class="svg-item svg-item--stroke">
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#breadcrumb-spacer" /></svg>
+		<div class="svg-name js-svg-name">#breadcrumb-spacer</div>
+	</div>
+
+	<div class="svg-item">
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#menu-dots" /></svg>
+		<div class="svg-name js-svg-name">#menu-dots</div>
+	</div>
+
+	<div class="svg-item svg-item--stroke">
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#menu-back" /></svg>
+		<div class="svg-name js-svg-name">#menu-back</div>
+	</div>
+
+	<div class="svg-item svg-item--stroke">
+		<svg><use xlink:href="/resources/imgs/svgsprite.svg#close" /></svg>
+		<div class="svg-name js-svg-name">#close</div>
+	</div>
 </div>
+
+
 
