--- a/resources/css/base/mixins/prefixmixins.less
+++ b/resources/css/base/mixins/prefixmixins.less
@@ -168,6 +168,12 @@
 .translate(@x, @y){
 	.transform(translate(@x, @y));
 }
+.translateX(@x){
+	.transform(translateX(@x));
+}
+.translateY(@y){
+	.transform(translateY(@y));
+}
 .translate3d(@x, @y, @z){
 	.transform(translate3d(@x, @y, @z));
 }
