--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -62,12 +62,6 @@ video {
 ================================== */
 /* Font Faces
 ================================== */
-.svg-sprite {
-  height: 0;
-  width: 0;
-  position: absolute;
-  visibility: hidden;
-}
 @media (min-width: 35em) {
   .hide-min-xs {
     display: none;
@@ -631,7 +625,7 @@ address {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.1);
   opacity: 0;
   will-change: opacity;
   transition: opacity 0.3s cubic-bezier(0.3, 0.15, 0.18, 1);
@@ -640,18 +634,23 @@ address {
   position: absolute;
   top: 0;
   left: 0;
-  width: 400px;
-  background: #fff;
+  width: 470px;
+  padding-left: 85px;
+  padding-top: 52px;
+  background-color: #150e13;
+  color: #fff;
   height: 100%;
-  box-shadow: 2px 0 12px rgba(0, 0, 0, 0.4);
-  transform: translateX(-102%);
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
   will-change: transform;
 }
 .ds-slidein--right .ds-slidein__container {
   left: auto;
   right: 0;
-  transform: translateX(102%);
-  box-shadow: -2px 0 12px rgba(0, 0, 0, 0.4);
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
 }
 .ds-slidein--animatable .ds-slidein__container {
   transition: transform 0.2s cubic-bezier(0.3, 0.15, 0.18, 1);
@@ -665,109 +664,50 @@ address {
 .ds-slidein--visible .ds-slidein__container {
   transform: none;
 }
+.ds-slidein__action--close {
+  width: 64px;
+  height: 74px;
+  stroke: #fff;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+}
+.ds-slidein__action--close svg {
+  width: 54px;
+  height: 54px;
+}
 .ds-slidein__action--hide {
   display: none;
 }
-.ml-menu__wrap {
-  position: absolute;
-  top: 56px;
-  bottom: 0;
-  width: 100%;
-  height: calc(100%  - 56px);
-  overflow-x: hidden;
-}
-.ml-menu__level {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(100%  + 50px);
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  opacity: 0;
-  will-change: opacity;
-  overflow: hidden;
-  pointer-events: none;
+.ml-menu__header {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
   display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  list-style: none;
-}
-.ml-menu__level--current {
-  opacity: 1;
-  pointer-events: auto;
-}
-.ml-menu__level li {
-  display: flex;
-  width: calc(100%  - 50px);
-  will-change: transform;
-  transform: translate(0, 0);
-}
-.animate-outToRight.ml-menu__level li {
-  animation: outToRight 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
-}
-.animate-outToLeft.ml-menu__level li {
-  animation: outToLeft 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
-}
-.animate-inFromLeft.ml-menu__level li {
-  animation: inFromLeft 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
-}
-.animate-inFromRight.ml-menu__level li {
-  animation: inFromRight 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
-}
-.ml-menu__link {
-  position: relative;
-  display: block;
-  padding-top: 16px;
-  padding-right: 40px;
-  padding-bottom: 16px;
-  padding-left: 24px;
-  text-decoration: none;
-  transition: color 0.1s;
-  flex: 1 1 70%;
-}
-.ml-menu__link[data-submenu] + .ml-menu__link--subnav {
-  flex: 1 1 30%;
-  position: relative;
-  cursor: pointer;
-}
-.ml-menu__link[data-submenu] + .ml-menu__link--subnav:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  height: 60%;
-  transform: translateY(-50%);
-  border-left: 1px solid;
-}
-.ml-menu__link[data-submenu] + .ml-menu__link--subnav:after {
-  content: '>';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 20px;
-  padding-right: 20px;
-  transform: translate(-50%, -50%);
-}
-.ml-menu__action--hide {
-  display: none;
-}
-.ml-menu [class^='animate-'],
-.ml-menu [class*=' animate-'] {
-  opacity: 1;
-  pointer-events: auto;
+  -ms-flex-align: end;
+  -webkit-align-items: flex-end;
+  -moz-align-items: flex-end;
+  -ms-align-items: flex-end;
+  -o-align-items: flex-end;
+  align-items: flex-end;
+  -ms-flex-line-pack: end;
+  -webkit-align-content: flex-end;
+  -moz-align-content: flex-end;
+  -o-align-content: flex-end;
+  align-content: flex-end;
 }
 .ml-menu__breadcrumbs {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1;
   position: relative;
-  padding: 26px 40px 16px 26px;
-  font-weight: 100;
+  margin-top: 70px;
+  -webkit-flex: 1 1 80%;
+  -moz-flex: 1 1 80%;
+  -ms-flex: 1 1 80%;
+  -o-flex: 1 1 80%;
+  flex: 1 1 80%;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: -moz-flex;
@@ -792,7 +732,7 @@ address {
   cursor: pointer;
   letter-spacing: 1px;
   text-transform: uppercase;
-  color: #888;
+  color: #fff;
 }
 .ml-menu__breadcrumbs a:last-child {
   pointer-events: none;
@@ -800,15 +740,153 @@ address {
 .ml-menu__breadcrumbs a:hover {
   color: #bbf;
 }
-.ml-menu__breadcrumbs a:not(:last-child)::after {
-  content: '->';
-  display: inline-block;
-  padding: 0 5px;
-  color: #888;
-  font-size: 0.8em;
+.ml-menu__breadcrumb-space {
+  stroke: #fff;
+  width: 1.2em;
+  height: 1em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
-.ml-menu__breadcrumbs a:not(:last-child):hover::after {
-  color: #888;
+.ml-menu__breadcrumb-space svg {
+  width: 1.2em;
+  height: 1em;
+}
+.ml-menu__action--back {
+  stroke: #fff;
+  -webkit-flex: 1 1 20%;
+  -moz-flex: 1 1 20%;
+  -ms-flex: 1 1 20%;
+  -o-flex: 1 1 20%;
+  flex: 1 1 20%;
+}
+.ml-menu__action--back svg {
+  width: 25px;
+  height: 25px;
+}
+.ml-menu__action--hide {
+  display: none;
+}
+.ml-menu__wrap {
+  position: absolute;
+  top: 225px;
+  bottom: 0;
+  width: calc(100%  - 85px);
+  height: calc(100%  - 225px);
+  overflow-x: hidden;
+}
+.ml-menu__level {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(100%  + 50px);
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  will-change: opacity;
+  overflow: hidden;
+  pointer-events: none;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  -o-flex-direction: column;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  list-style: none;
+}
+.ml-menu__level--current {
+  opacity: 1;
+  pointer-events: auto;
+}
+.ml-menu__level li {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  width: calc(100%  - 50px);
+  will-change: transform;
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+.animate-outToRight.ml-menu__level li {
+  -webkit-animation: outToRight 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+  animation: outToRight 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+}
+.animate-outToLeft.ml-menu__level li {
+  -webkit-animation: outToLeft 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+  animation: outToLeft 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+}
+.animate-inFromLeft.ml-menu__level li {
+  -webkit-animation: inFromLeft 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+  animation: inFromLeft 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+}
+.animate-inFromRight.ml-menu__level li {
+  -webkit-animation: inFromRight 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+  animation: inFromRight 0.6s both cubic-bezier(0.3, 0.15, 0.18, 1);
+}
+.ml-menu__link {
+  position: relative;
+  display: block;
+  padding-top: 16px;
+  padding-right: 40px;
+  padding-bottom: 16px;
+  text-decoration: none;
+  color: #fff;
+  transition: color 0.1s;
+  -webkit-flex: 1 1 70%;
+  -moz-flex: 1 1 70%;
+  -ms-flex: 1 1 70%;
+  -o-flex: 1 1 70%;
+  flex: 1 1 70%;
+}
+.ml-menu__link[data-submenu] + .ml-menu__link--subnav {
+  -webkit-flex: 1 1 30%;
+  -moz-flex: 1 1 30%;
+  -ms-flex: 1 1 30%;
+  -o-flex: 1 1 30%;
+  flex: 1 1 30%;
+  position: relative;
+  cursor: pointer;
+  fill: #fff;
+}
+.ml-menu__link[data-submenu] + .ml-menu__link--subnav svg {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+.ml-menu__link[data-submenu] + .ml-menu__link--subnav:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border-left: 1px solid #fff;
+}
+.ml-menu [class^='animate-'],
+.ml-menu [class*=' animate-'] {
+  opacity: 1;
+  pointer-events: auto;
 }
 @-webkit-keyframes outToRight {
   to {
