--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -7,7 +7,7 @@
 @import "base/fontfaces";
 
 //utils
-@import "utility/svg-sprite-wrap";
+//@import "utility/svg-sprite-wrap";
 @import "utility/visibility";
 @import "utility/ratios";
 
